<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/smallMargin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/normalMargin"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/textViewDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addEntry_date" />

                    <EditText
                        android:id="@+id/editTextDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="8"
                        android:inputType="date"
                        android:hint="@string/addEntry_date" />

                    <Button
                        android:id="@+id/buttonDatepicker"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addEntry_buttonDatepicker" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/normalMargin" >

                    <TextView
                        android:id="@+id/textViewKm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addEntry_km" />

                    <EditText
                        android:id="@+id/editTextKm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="8"
                        android:layout_weight="1"
                        android:inputType="numberDecimal"
                        android:hint="@string/addEntry_km" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/normalMargin" >

                    <TextView
                        android:id="@+id/textViewFuel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addEntry_fuelAmount" />

                    <EditText
                        android:id="@+id/editTextFuel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="8"
                        android:layout_weight="1"
                        android:inputType="numberDecimal"
                        android:hint="@string/addEntry_fuelAmount" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/normalMargin"
                    android:baselineAligned="true" >

                    <TextView
                        android:id="@+id/textViewPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addEntry_price" />

                    <EditText
                        android:id="@+id/editTextPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="8"
                        android:layout_weight="1"
                        android:inputType="numberDecimal"
                        android:hint="@string/addEntry_price" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/normalMargin" >

                    <TextView
                        android:id="@+id/textViewFull"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal" />

                    <CheckBox
                        android:id="@+id/checkBoxFull"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/addEntry_tankFull" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/normalMargin"
                    android:layout_weight="1"
                    android:text="@string/addEntry_buttonCancel" />

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/normalMargin"
                    android:layout_weight="1"
                    android:text="@string/addEntry_buttonSave" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>